--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
+:root {
+  --blue: #245fb6;
+  --blue-flavor: #5e98ec;
+  --black: #2d2e32;
+  --white: #fffafa;
+}
+
 *,
 *::before,
 *::after {
