--- a/src/styles/floatingBubbles.css
+++ b/src/styles/floatingBubbles.css
@@ -1,14 +1,12 @@
 .floating-bubbles {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
 
 .gamescreen {
-  border: 1px solid var(--blue);
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 75vh;
+  background: var(--red);
+  color: var(--white);
 }
 
 .floating {
@@ -37,10 +35,10 @@ button {
   transform: translateX(-50%);
   width: 70px;
   height: 70px;
-  background: var(--blue);
+  background: var(--white);
   border-radius: 50%;
   transition: all 1s ease;
-  border: 4px solid var(--blue-flavor);
+  border: 3px solid var(--red-flavor);
 }
 
 .leftsec {
@@ -53,7 +51,7 @@ button {
   border: none;
 }
 .leftsec:hover {
-  background: rgba(0, 0, 255, 0.185);
+  background: rgba(212, 186, 174, 0.609);
   cursor: pointer;
 }
 
@@ -68,5 +66,5 @@ button {
 }
 .rightsec:hover {
   cursor: pointer;
-  background: rgba(0, 0, 255, 0.185);
+  background: rgba(212, 186, 174, 0.609);
 }
