--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,9 +1,11 @@
 .hero {
-  height: 30vh;
+  height: 75vh;
+  width: 100%;
   display: flex;
   padding: 3rem;
   font-size: 1.6rem;
-  color: var(--blue);
+  color: var(--white);
+  background: var(--red);
   justify-content: flex-start;
   align-items: center;
 }
@@ -14,27 +16,40 @@
   justify-content: flex-start;
   align-items: center;
   list-style: none;
-  margin: 3rem;
+  width: 100%;
 }
+
 .game {
-  height: 35vh;
-  width: 30%;
-  border: 1px solid var(--blue);
-  padding: 2rem;
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
-  color: var(--blue);
+  color: var(--red);
+  background: var(--red);
+  flex-grow: 1;
+  width: 35%;
+  flex-wrap: wrap;
+  height: 16vh;
+}
+
+.game:nth-child(even) {
+  background: var(--red-flavor);
 }
 .game a {
   color: var(--white);
-  background: var(--blue);
-  width: max-content;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   text-decoration: none;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.game p {
+  color: var(--red);
+  background: var(--white);
+  padding: 0.3rem;
+  border-radius: 50%;
+  margin-left: 1rem;
 }
 .game a:hover {
-  background: var(--blue-flavor);
+  background: var(--red-flavor2);
 }
 
 @media (max-width: 1000px) {
