--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,5 +1,5 @@
 .header {
-  background: var(--blue);
+  background: var(--red);
   display: flex;
   justify-content: space-around;
   align-items: center;
