--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,13 +1,14 @@
 .header {
-  background: var(--red);
   display: flex;
   justify-content: space-around;
   align-items: center;
+  color: var(--black);
+  border-bottom: 4px solid var(--red);
 }
 
 .logo a {
-  color: var(--white);
   text-decoration: none;
+  color: var(--black);
 }
 
 .right {
@@ -19,10 +20,9 @@
   justify-content: center;
   align-items: center;
   height: 9vh;
-  color: var(--white);
 }
 .navbar a {
-  color: var(--white);
+  color: var(--black);
   padding: 0.5rem 1rem;
   text-decoration: none;
 }
@@ -31,56 +31,28 @@
 }
 
 .github a {
-  color: var(--white);
+  color: var(--black);
 }
 
-.hamburger {
-  flex-direction: column;
-  display: none;
+.listofgames {
+  display: grid;
+  grid-template-columns: 1fr 16fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: ". games .";
 }
-.line {
-  height: 4px;
-  width: 40px;
-  background: var(--white);
-  margin: 0.2rem;
-}
-
-.hamburger-menu {
-  position: absolute;
-  top: 9vh;
-  left: 0;
-  width: 100%;
-  height: max-content;
-  background: var(--white);
-}
-
-.hamburger-menu-list {
+.games {
+  grid-area: games;
   list-style: none;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 3rem;
+  flex-wrap: wrap;
 }
-.hamburger-menu-list li {
-  width: 100%;
-  height: 12vh;
-  text-align: center;
+.game {
+  background: var(--white);
+  padding: 0.5rem 1rem;
+  margin: 2rem;
 }
-.hamburger-menu-list li a {
-  color: var(--black);
-  text-decoration: none;
-}
-
-@media (max-width: 800px) {
-  .navbar {
-    display: none;
-  }
-  .github {
-    display: none;
-  }
-
-  .hamburger {
-    display: flex;
-  }
+.game a {
+  color: var(--red);
 }
