--- a/src/styles/floatingBubbles.css
+++ b/src/styles/floatingBubbles.css
@@ -1,70 +1,89 @@
 .floating-bubbles {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 12fr 1fr;
+  grid-template-rows: 10vh auto auto 10vh;
+  grid-template-areas:
+    ". . ."
+    ". gamescreen ."
+    ". history ."
+    ". . .";
 }
 
-.gamescreen {
-  width: 100%;
-  height: 75vh;
-  background: var(--red);
-  color: var(--white);
+.floating-bubbles .gamescreen {
+  grid-area: gamescreen;
 }
-
-.floating {
+.floating-bubbles .gamescreen .floating-head {
+  text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  height: 100%;
-  position: relative;
-  padding: 2rem;
+  color: var(--red);
+  margin-bottom: 2rem;
 }
-.floating h2,
-p,
-button {
-  z-index: 999;
+.floating-choose {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.bubbles {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+.floating-head .floating-down {
+  background: var(--red);
+  color: var(--white);
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  width: max-content;
 }
-
+.floating-head .floating-up {
+  background: var(--red);
+  margin: 0.5rem;
+  color: var(--white);
+  padding: 0.5rem 1rem;
+}
+.floating-bubbles .gamescreen .floating-game {
+  display: grid;
+  grid-template-columns: 1fr 16fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    ". bubbles ."
+    ". result .";
+  min-height: 30vh;
+}
+.floating-bubbles .gamescreen .floating-game .bubbles {
+  grid-area: bubbles;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.floating-result {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: result;
+}
 .bubble {
-  position: absolute;
-  transform: translateX(-50%);
-  width: 70px;
-  height: 70px;
-  background: var(--white);
-  border-radius: 50%;
-  transition: all 1s ease;
-  border: 3px solid var(--red-flavor);
+  background: var(--red);
+  color: var(--white);
+  padding: 1rem;
+  margin: 0.4rem;
 }
 
-.leftsec {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background: transparent;
-  border: none;
-}
-.leftsec:hover {
-  background: rgba(212, 186, 174, 0.609);
-  cursor: pointer;
+.truefalse {
+  grid-area: history;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.rightsec {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 100%;
-  background: transparent;
-  border: none;
+.true {
+  width: 30px;
+  height: 30px;
+  background: #98fb98;
+  margin: 0.1rem;
 }
-.rightsec:hover {
-  cursor: pointer;
-  background: rgba(212, 186, 174, 0.609);
+.false {
+  width: 30px;
+  height: 30px;
+  background: #8b0000;
+  margin: 0.1rem;
 }
