--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,65 +4,10 @@
   display: flex;
   padding: 3rem;
   font-size: 1.6rem;
-  color: var(--white);
-  background: var(--red);
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.games {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  list-style: none;
-  width: 100%;
-}
-
-.game {
-  display: flex;
-  justify-content: space-around;
-  color: var(--red);
-  background: var(--red);
-  flex-grow: 1;
-  width: 35%;
-  flex-wrap: wrap;
-  height: 16vh;
-}
-
-.game:nth-child(even) {
-  background: var(--red-flavor);
-}
-.game a {
-  color: var(--white);
-  padding: 1rem;
-  text-decoration: none;
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-.game p {
-  color: var(--red);
+  color: var(--black);
   background: var(--white);
-  padding: 0.3rem;
-  border-radius: 50%;
-  margin-left: 1rem;
-}
-.game a:hover {
-  background: var(--red-flavor2);
-}
-
-@media (max-width: 1000px) {
-  .game {
-    width: 45%;
-  }
-}
-
-@media (max-width: 800px) {
-  .games {
-    margin: 0.5rem;
-  }
-  .game {
-    width: 85%;
-  }
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--red);
+  border-bottom: 4px solid var(--red);
 }
